#29 - removed comments and compressed images and fixed gap

--- a/app/components/about-header/about-header.module.css
+++ b/app/components/about-header/about-header.module.css
@@ -1,34 +1,31 @@
-/* AboutHeader.module.css */
 .section {
-  background-image: url("/assets/images/about-header-bg.jpeg");
-  background-size: cover; /* Adjust as needed */
-  background-repeat: no-repeat; /* Prevent repeating */
-  background-position: center 20%; /* Default value */
+  background-image: url("/assets/images/about-header-bg-min.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center 20%;
   opacity: 90%;
 }
 
-/* For screens 320px and wider */
 @media (min-width: 320px) and (max-width: 499px) {
   .section {
-    background-position: center 30%; /* Change to 40% */
+    background-position: center 30%;
   }
 }
-/* For screens 720px and wider */
+
 @media (min-width: 500px) and (max-width: 699px) {
   .section {
-    background-position: center 23%; /* Change to 25% */
+    background-position: center 23%;
   }
 }
 
 @media (min-width: 700px) and (max-width: 1279px) {
   .section {
-    background-position: center 20%; /* Change to 25% */
+    background-position: center 20%;
   }
 }
 
-/* For screens above 1280px */
 @media (min-width: 1280px) {
   .section {
-    background-position: center 16%; /* Keep at 20% */
+    background-position: center 16%;
   }
 }
